@@ -1,3 +1,11 @@
+2002-01-07  Dave Peticolas  <dave@krondo.com>
+
+	* src/backend/postgres/account.c: check for missing currency
+	when loading accounts
+
+	* src/backend/postgres/PostgresBackend.c: check for missing
+	currency when loading transactions
+
 2002-01-07  Christian Stimming  <stimming@tuhh.de>
 
 	* src/report/report-system/commodity-utilities.scm: Tweaked the
